# Advanced-Cpp

./: .gitignore  CMakeLists.txt  common.cmake
modules/: 27_remove_reference.cpp  advanced_cpp_examples.cpp
modules/01_Templates/: CMakeLists.txt
modules/01_Templates/01_Template_metaprogramming_basics/: 01_factorial.cpp  02_fibonacci.cpp  03_power_of_N.cpp  04_power_of_N_optimized.cpp  05_compile_time_prime_check.cpp
modules/01_Templates/02_SFINAE/: 06_basic_SFINAE.cpp  07_SFINAE_function_overloading.cpp
modules/01_Templates/02_SPFINAE/: 08_SPFINAE_member_functions.cpp  09_SPFINAE_with_concepts.cpp
modules/01_Templates/03_Variadic_templates/: 10_basic_variadic_template.cpp  11_variadic_class_template.cpp  12_variadic_template_fold_expression.cpp  13_forwarding_template.cpp  14_variadic_compile_type_computations.cpp
modules/01_Templates/04_template_specialization/: 16_partial_speciaalization.cpp  17_custom_allocator.cpp  18_specialization_with_SFINAE.cpp
modules/01_Templates/05_compile_time_data_structure/: 19_compile_time_linked_list.cpp  20_compile_time_binary_tree.cpp  21_compile_time_map.cpp  22_compile_time_vector.cpp  23_compile_time_variant_with_visit.cpp
modules/01_Templates/06_compile_type_algorithms/: 23_compile_time_string_manipulation.cpp  24_compile_time_sorting.cpp  25_compile_time_matrix_multiplication.cpp  26_compile_time_GCD.cpp
modules/02_STL/: CMakeLists.txt
modules/Module1/: CMakeLists.txt  hello_world_1.cpp  hello_world_2.cpp
modules/Module2/: CMakeLists.txt  hello_world_3.cpp  hello_world_4.cpp
scripts/: build.sh
(+243 files in other folders)
